platformless actions: working GCODE generation for tip pickup

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -651,10 +651,16 @@
    "outputs": [],
    "source": [
     "# Set \"mongo_url = None\" to skip the database connection.\n",
+    "# backend = PiperBackend(verbose=True,\n",
+    "#                        mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
+    "#                        sio_address = \"http://192.168.11.39:3333\", # Pipettin GUI node server.\n",
+    "#                        ws_address = \"ws://192.168.11.39:7125/websocket\", # Moonraker server.\n",
+    "# )\n",
+    "\n",
     "backend = PiperBackend(verbose=True,\n",
     "                       mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
-    "                       sio_address = \"http://192.168.11.39:3333\", # Pipettin GUI node server.\n",
-    "                       ws_address = \"ws://192.168.11.39:7125/websocket\", # Moonraker server.\n",
+    "                       sio_address = \"http://localhost:3333\", # Pipettin GUI node server.\n",
+    "                       ws_address = \"ws://localhost:7125/websocket\", # Moonraker server.\n",
     ")"
    ]
   },
@@ -725,11 +731,18 @@
    },
    "outputs": [],
    "source": [
-    "pprint(backend.tracker[cmd_id])\n",
+    "# pprint(backend.tracker[cmd_id])\n",
     "# backend.tracker[cmd_id][\"response\"]\n",
     "# backend.tracker[cmd_id][\"response\"][\"error\"]\n",
     "# backend.tracker[cmd_id][\"response\"][\"error\"][\"message\"]\n",
     "# print(backend.tracker[cmd_id][\"response\"][\"error\"][\"message\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make GCODE for an action:"
    ]
   },
   {
@@ -743,13 +756,27 @@
     "# cmd_id = await backend.moon.send_gcode_cmd(\"G0 X100\", wait=True, check=True, timeout=1.0)\n",
     "# pprint(backend.tracker[cmd_id])\n",
     "\n",
-    "# Make GCODE\n",
+    "\n",
+    "# Hardcode the heigh clearance\n",
+    "backend.builder.clearance = 100.0\n",
+    "\n",
     "# TODO: customize parameters.\n",
+    "home_action = {'cmd': 'HOME'}\n",
     "pick_up_tip_action = {\n",
     "    'args': {'item': '200ul_tip_rack_MULTITOOL 1', 'tool': 'P200'},\n",
     "    'cmd': 'PICK_TIP'}\n",
-    "home_action = {'cmd': 'HOME'}\n",
-    "gcode = backend.builder.addAction(action=home_action)\n",
+    "\n",
+    "# Platformless tip pickup\n",
+    "minimal_tip_data = {'maxVolume': 160, 'tipLength': 50.0, 'volume': 0}\n",
+    "pick_up_tip_action_coords = {\n",
+    "    'args': {'coords': {\"x\": 20, \"y\": 200, \"z\": 30}, \n",
+    "             'tool': 'P200',\n",
+    "             'tip': minimal_tip_data},\n",
+    "    'cmd': 'PICK_TIP'}\n",
+    "\n",
+    "# Make GCODE\n",
+    "action = pick_up_tip_action_coords\n",
+    "gcode = backend.builder.parseAction(action=action)\n",
     "pprint(gcode)"
    ]
   },
