send M84 before shutting down the backend

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -651,17 +651,17 @@
    "outputs": [],
    "source": [
     "# Set \"mongo_url = None\" to skip the database connection.\n",
+    "backend = PiperBackend(verbose=False,\n",
+    "                       mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
+    "                       sio_address = \"http://192.168.11.39:3333\", # Pipettin GUI node server.\n",
+    "                       ws_address = \"ws://192.168.11.39:7125/websocket\", # Moonraker server.\n",
+    ")\n",
+    "\n",
     "# backend = PiperBackend(verbose=True,\n",
     "#                        mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
-    "#                        sio_address = \"http://192.168.11.39:3333\", # Pipettin GUI node server.\n",
-    "#                        ws_address = \"ws://192.168.11.39:7125/websocket\", # Moonraker server.\n",
-    "# )\n",
-    "\n",
-    "backend = PiperBackend(verbose=True,\n",
-    "                       mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
-    "                       sio_address = \"http://localhost:3333\", # Pipettin GUI node server.\n",
-    "                       ws_address = \"ws://localhost:7125/websocket\", # Moonraker server.\n",
-    ")"
+    "#                        sio_address = \"http://localhost:3333\", # Pipettin GUI node server.\n",
+    "#                        ws_address = \"ws://localhost:7125/websocket\", # Moonraker server.\n",
+    "# )"
    ]
   },
   {
@@ -775,7 +775,7 @@
     "    'cmd': 'PICK_TIP'}\n",
     "\n",
     "# Make GCODE\n",
-    "action = pick_up_tip_action_coords\n",
+    "action = home_action\n",
     "gcode = backend.builder.parseAction(action=action)\n",
     "pprint(gcode)"
    ]
@@ -814,6 +814,19 @@
    },
    "outputs": [],
    "source": [
+    "# Turn steppers off\n",
+    "cmd_id = await backend.moon.send_gcode_cmd(\"M84\", wait=True, check=True, timeout=2.0)\n",
+    "pprint(backend.tracker[cmd_id], width=120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# Wait for idle printer.\n",
     "result = await backend.moon.wait_for_idle_printer(timeout = 20.0)\n",
     "\n",
@@ -823,7 +836,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "await backend.stop()"
