pick_up_tips: only missing a way to select the tool

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -341,7 +341,11 @@
    },
    "outputs": [],
    "source": [
-    "pick_up_op.get_absolute_location()"
+    "coordinate = pick_up_op.get_absolute_location()\n",
+    "\n",
+    "print(coordinate)\n",
+    "\n",
+    "coordinate.serialize()"
    ]
   },
   {
@@ -815,8 +819,8 @@
    "outputs": [],
    "source": [
     "# Turn steppers off\n",
-    "cmd_id = await backend.moon.send_gcode_cmd(\"M84\", wait=True, check=True, timeout=2.0)\n",
-    "pprint(backend.tracker[cmd_id], width=120)"
+    "# cmd_id = await backend.moon.send_gcode_cmd(\"M84\", wait=True, check=True, timeout=2.0)\n",
+    "# pprint(backend.tracker[cmd_id], width=120)"
    ]
   },
   {
