more detailed examples and explanations

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -18,6 +18,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Development environment\n",
+    "\n",
     "Check if the correct environment is in use:"
    ]
   },
@@ -59,7 +61,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basic imports:"
+    "Load your virtual environment and update the modules:\n",
+    "\n",
+    "```bash\n",
+    "source .venv/bin/activate\n",
+    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pipettin-grbl/klipper/piper\n",
+    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pylabrobot[dev]\n",
+    "```\n",
+    "\n",
+    "Repeat each time you want to test out changes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic imports"
    ]
   },
   {
@@ -85,7 +102,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Writing a custom Backend\n"
+    "## Writing a custom Backend\n",
+    "\n",
+    "There are a bunch of useful imports that must come first, and then the definition of a Python class inheriting from \"LiquidHandlerBackend\".\n",
+    "\n",
+    "The new class, as shown below, has placeholders for each of the important methods that the backend must implement.\n",
+    "\n",
+    "This new \"EchoBackend\" mimics the ChatterBox backend already available in PLR. This one saves the objects it received for inspection."
    ]
   },
   {
@@ -179,6 +202,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Usage examples\n",
+    "\n",
+    "This new class can be used immediately, as is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Instantiate the Echo backend, with one channel:"
    ]
   },
@@ -254,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pick up a tip, and aspirate from two wells:"
+    "Pick up a tip:"
    ]
   },
   {
@@ -281,22 +313,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plate = lh.get_resource(\"plate_01\")\n",
-    "await lh.aspirate(plate[\"A1\"], vols=[100.0])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect the objects passed to aspirate:"
+    "Inspect the objects passed to the backend:"
    ]
   },
   {
@@ -308,6 +328,15 @@
    "outputs": [],
    "source": [
     "pprint(lh.backend.commands)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Inspect the tip pickup operation:"
    ]
   },
   {
@@ -354,7 +383,7 @@
    "source": [
     "The offset attribute, unless altered by the lh or backend, is a \"Default\" object.\n",
     "\n",
-    "It has no information whatsoever, other than it hints that it should be replaced by a default value."
+    "It has no information whatsoever, other than hinting that it should be replaced by a default value."
    ]
   },
   {
@@ -382,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dispense in another well, and drop the tips (back in the box):"
+    "Aspirate from two wells:"
    ]
   },
   {
@@ -393,9 +422,115 @@
    },
    "outputs": [],
    "source": [
-    "await lh.dispense(plate[\"D1\"], vols=[100.0])\n",
+    "plate = lh.get_resource(\"plate_01\")\n",
+    "await lh.aspirate(plate[\"A1\"], vols=[100.0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect the \"Aspiration\" operation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Get the operation\n",
+    "ops = lh.backend.commands[1][\"ops\"]\n",
+    "op = ops[0]\n",
     "\n",
-    "await lh.drop_tips(tiprack[\"A1\"])"
+    "# Some useful parameters\n",
+    "op.volume\n",
+    "op.get_absolute_location()\n",
+    "op.blow_out_air_volume\n",
+    "op.liquid_height\n",
+    "op.flow_rate\n",
+    "\n",
+    "# The current volume is harder to access, this is defined in the \"Container\" class.\n",
+    "op.resource.tracker.get_used_volume()\n",
+    "\n",
+    "# Print everything\n",
+    "pprint(op)\n",
+    "pprint(op.serialize())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dispense to another well, and drop the tips (back in the box):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "await lh.dispense(plate[\"D1\"], vols=[100.0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are THREE ways to remove tips from the pipettes:\n",
+    "\n",
+    "- `return_tips`: \"_Return all tips that are currently picked up to their original place_\". Takes no arguments.\n",
+    "  - Do not use this if your pipettes cannot eject tips by themselves (i.e. they must go to a certain spot to discard tips, and cannot return tips to their box).\n",
+    "- `discard_tips`: \"_Permanently discard tips_\", from the specified channels. Uses the deck's \"trash area\".\n",
+    "- `drop_tips`: \"_Drop tips to a resource_\". The lowest-level form of this action, used by `return_tips` and `discard_tips`. Requires a list of \"tip spots\" (undocumented parameter); probably a \"_List of tip spots to pick up tips from_\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await lh.drop_tips(tip_spots=tiprack[\"A1\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect the \"Dispense\" operation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Get the operation\n",
+    "ops = lh.backend.commands[2][\"ops\"]\n",
+    "op = ops[0]\n",
+    "\n",
+    "# Some useful parameters\n",
+    "op.volume\n",
+    "op.get_absolute_location()\n",
+    "op.blow_out_air_volume\n",
+    "op.liquid_height\n",
+    "op.flow_rate\n",
+    "\n",
+    "# The current volume is harder to access, this is defined in the \"Container\" class.\n",
+    "op.resource.tracker.get_used_volume()\n",
+    "\n",
+    "# Print everything\n",
+    "pprint(op)\n",
+    "pprint(op.serialize())"
    ]
   },
   {
@@ -420,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Number of channels\n",
+    "#### Number of channels\n",
     "\n",
     "The number of \"pipetting channels\" represents how many tips a robot/backend/tool can operate simultaneously.\n",
     "\n",
@@ -527,7 +662,7 @@
     "  tiprack = lh.get_resource(\"tips_01\")\n",
     "  await lh.pick_up_tips(tiprack[\"A1:C1\"])\n",
     "except:\n",
-    "  print(traceback.format_exc())\n"
+    "  print(tracebcack.format_exc())\n"
    ]
   },
   {
