--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -493,7 +493,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "await lh.drop_tips(tip_spots=tiprack[\"A1\"])"
@@ -567,7 +569,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "backend = EchoBackend(num_channels=2)"
@@ -583,7 +587,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "lh = LiquidHandler(backend=backend, deck=STARLetDeck())\n",
@@ -613,7 +619,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# plate.children[0].serialize()\n",
@@ -630,7 +638,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "tiprack = lh.get_resource(\"tips_01\")\n",
@@ -653,7 +663,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import traceback\n",
@@ -682,7 +694,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "await lh.stop()"
@@ -700,7 +714,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# ?"
@@ -778,7 +794,8 @@
    },
    "outputs": [],
    "source": [
-    "!nc -zv 192.168.11.39 27017  # Should output \"192.168.11.39 27017 (mongodb) open\""
+    "## !nc -zv 192.168.11.39 27017  # Should output \"192.168.11.39 27017 (mongodb) open\"\n",
+    "!nc -zv localhost 27017  # Should output \"localhost [127.0.0.1] 27017 (mongodb) open\""
    ]
   },
   {
@@ -790,17 +807,17 @@
    "outputs": [],
    "source": [
     "# Set \"mongo_url = None\" to skip the database connection.\n",
+    "# backend = PiperBackend(verbose=False,\n",
+    "#                        mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
+    "#                        sio_address = \"http://192.168.11.39:3333\", # Pipettin GUI node server.\n",
+    "#                        ws_address = \"ws://192.168.11.39:7125/websocket\", # Moonraker server.\n",
+    "# )\n",
+    "\n",
     "backend = PiperBackend(verbose=False,\n",
     "                       mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
-    "                       sio_address = \"http://192.168.11.39:3333\", # Pipettin GUI node server.\n",
-    "                       ws_address = \"ws://192.168.11.39:7125/websocket\", # Moonraker server.\n",
-    ")\n",
-    "\n",
-    "# backend = PiperBackend(verbose=True,\n",
-    "#                        mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
-    "#                        sio_address = \"http://localhost:3333\", # Pipettin GUI node server.\n",
-    "#                        ws_address = \"ws://localhost:7125/websocket\", # Moonraker server.\n",
-    "# )"
+    "                       sio_address = \"http://localhost:3333\", # Pipettin GUI node server.\n",
+    "                       ws_address = \"ws://localhost:7125/websocket\", # Moonraker server.\n",
+    ")"
    ]
   },
   {
@@ -811,7 +828,21 @@
    },
    "outputs": [],
    "source": [
-    "await backend.setup()"
+    "# backend.moon.start_as_task()\n",
+    "# await backend.moon.wait_for_setup(timeout=2.0, raise_error=True)\n",
+    "# await backend.moon.wait_for_ready(reset=True, wait_time=1.1, timeout=10.0)\n",
+    "\n",
+    "await backend.setup()\n",
+    "\n",
+    "# pprint(backend.tracker[\"PLR setup\"], width=120)\n",
+    "# backend.moon.get_response_by_id(cmd_id=\"PLR setup\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examine the backend's status:"
    ]
   },
   {
@@ -823,6 +854,13 @@
    "outputs": [],
    "source": [
     "pprint(backend.moon.status())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Play with lower-level backend commands:"
    ]
   },
   {
