--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -821,6 +821,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -836,6 +843,81 @@
     "\n",
     "# pprint(backend.tracker[\"PLR setup\"], width=120)\n",
     "# backend.moon.get_response_by_id(cmd_id=\"PLR setup\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Pick tips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Pipetting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Drop tips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Cleanup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Internal backend commands"
    ]
   },
   {
@@ -1025,7 +1107,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## STAR deck examples\n"
+    "## Deck setup examples\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup the Liquid Handler"
    ]
   },
   {
@@ -1041,9 +1130,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# backend = STAR()\n",
-    "backend = ChatterBoxBackend()\n",
-    "# backend = PiperBackend()\n",
+    "# Basic imports:\n",
+    "from pprint import pprint, pformat\n",
+    "# - liquid handler\n",
+    "from pylabrobot.liquid_handling import LiquidHandler\n",
+    "# - backend\n",
+    "from pylabrobot.liquid_handling.backends.piper_backend import PiperBackend\n",
+    "# - deck\n",
+    "from pylabrobot.resources.hamilton import STARLetDeck\n",
+    "\n",
+    "backend = PiperBackend(verbose=False,\n",
+    "                       mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
+    "                       sio_address = \"http://localhost:3333\", # Pipettin GUI node server.\n",
+    "                       ws_address = \"ws://localhost:7125/websocket\", # Moonraker server.\n",
+    "                       dry = True, # Actions have no consequence.\n",
+    "                       clearance=100.0 # TODO: get this from the deck's definition.\n",
+    ")\n",
     "\n",
     "lh = LiquidHandler(backend=backend, deck=STARLetDeck())"
    ]
@@ -1062,6 +1164,13 @@
    "outputs": [],
    "source": [
     "await lh.setup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the deck's contents"
    ]
   },
   {
@@ -1176,7 +1285,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Picking up tips\n",
+    "## Protocol actions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Picking up tips\n",
     "\n",
     "Picking up tips is as easy as querying the tips from the tiprack."
    ]
@@ -1188,14 +1304,14 @@
    "outputs": [],
    "source": [
     "tiprack = lh.get_resource(\"tips_01\")\n",
-    "await lh.pick_up_tips(tiprack[\"A1:C1\"])"
+    "await lh.pick_up_tips(tiprack[\"A1\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aspirating and dispensing"
+    "### Aspirating and dispensing"
    ]
   },
   {
@@ -1214,7 +1330,7 @@
    "outputs": [],
    "source": [
     "plate = lh.get_resource(\"plate_01\")\n",
-    "await lh.aspirate(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])"
+    "await lh.aspirate(plate[\"A1\"], vols=[100.0])"
    ]
   },
   {
@@ -1230,7 +1346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await lh.dispense(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])"
+    "await lh.dispense(plate[\"D1\"], vols=[100.0])"
    ]
   },
   {
@@ -1246,15 +1362,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await lh.aspirate(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])\n",
-    "await lh.dispense(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])"
+    "await lh.aspirate(plate[\"D1\"], vols=[100.0])\n",
+    "await lh.dispense(plate[\"A1\"], vols=[100.0])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discarding tips\n",
+    "### Discarding tips\n",
     "\n",
     "Finally, you can discard tips by using the {func}`~pylabrobot.liquid_handling.LiquidHandler.discard_tips` method."
    ]
@@ -1265,7 +1381,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "await lh.drop_tips(tiprack[\"A1:C1\"])"
+    "await lh.discard_tips()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning up"
    ]
   },
   {
