piper: basic backend written
no errors, but not usable yet

--- a/notebooks/back_development_guide.ipynb
+++ b/notebooks/back_development_guide.ipynb
@@ -241,7 +241,7 @@
    "outputs": [],
    "source": [
     "tiprack = lh.get_resource(\"tips_01\")\n",
-    "await lh.pick_up_tips(tiprack[\"A1\"])\n"
+    "await lh.pick_up_tips(tiprack[\"A1\"])"
    ]
   },
   {
@@ -359,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aspirate from two wells:"
+    "Aspirate from a well:"
    ]
   },
   {
@@ -727,7 +727,18 @@
     "\n",
     "You can create a virtual environment and test everything from there.\n",
     "\n",
-    "Check if the correct environment is in use:"
+    "Run the following to load your virtual environment and update the modules. Replace the paths below to match yours:\n",
+    "\n",
+    "```bash\n",
+    "source .venv/bin/activate\n",
+    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pipettin-grbl/code/klipper/piper\n",
+    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pipettin-grbl/code/newt\n",
+    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pylabrobot[dev]\n",
+    "```\n",
+    "\n",
+    "Run those commands each time you want to test out changes.\n",
+    "\n",
+    "You can then check if the correct environment is in use:"
    ]
   },
   {
@@ -751,34 +762,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load your virtual environment and update the modules. Replace the paths below to match yours:\n",
-    "\n",
-    "```bash\n",
-    "source .venv/bin/activate\n",
-    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pipettin-grbl/code/klipper/piper\n",
-    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pipettin-grbl/code/newt\n",
-    "pip install -U -e ~/Projects/GOSH/gosh-col-dev/pylabrobot[dev]\n",
-    "```\n",
-    "\n",
-    "Run these commands each time you want to test out changes.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Import modules by path\n",
     "\n",
-    "You can, instead, import the modules directly by path."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Import the `newt` and `piper` modules."
+    "You can, instead, import the `newt` and `piper` modules directly by path."
    ]
   },
   {
@@ -787,11 +773,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install jsonschema  # Install dependencies\n",
+    "# Install dependencies\n",
+    "# %pip install jsonschema\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"../../pipettin-grbl/code/newt/\")\n",
-    "import newt"
+    "import newt\n",
+    "\n",
+    "dir(newt)"
    ]
   },
   {
@@ -800,9 +789,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Install dependencies\n",
+    "# %pip install websockets pymongo aiohttp python-socketio\n",
+    "\n",
     "import sys\n",
-    "sys.path.append(\"../../pipettin-grbl/code/klipper/\")\n",
-    "import piper"
+    "sys.path.append(\"../../pipettin-grbl/code/klipper/piper\")\n",
+    "import piper\n",
+    "\n",
+    "dir(piper)"
    ]
   },
   {
@@ -847,7 +841,10 @@
    "outputs": [],
    "source": [
     "# Install the \"piper\" module from the path to the module's directory (replace appropriately).\n",
-    "# $ pip install -e ~/Projects/robot/pipettin-bot/klipper/piper/"
+    "# $ pip install -e ~/Projects/robot/pipettin-bot/klipper/piper/\n",
+    "\n",
+    "# Alternatively install the packages into the current environment:\n",
+    "# %pip install websockets pymongo aiohttp python-socketio"
    ]
   },
   {
@@ -888,6 +885,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following `piper` backend can be used in \"dry\" mode, which does not require active connections to the rest of the software associated to the Pipettin-bot."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -902,7 +907,7 @@
     "#                        ws_address = \"ws://192.168.11.39:7125/websocket\", # Moonraker server.\n",
     "# )\n",
     "\n",
-    "backend = PiperBackend(verbose=False,\n",
+    "backend = PiperBackend(verbose=False, dry=True, clearance=80.0,\n",
     "                       mongo_url=None, # \"mongodb://192.168.11.39:27017/\",\n",
     "                       sio_address = \"http://localhost:3333\", # Pipettin GUI node server.\n",
     "                       ws_address = \"ws://localhost:7125/websocket\", # Moonraker server.\n",
@@ -918,21 +923,81 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can setup the backend independently of a PLR liquid handler object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# backend.moon.start_as_task()\n",
     "# await backend.moon.wait_for_setup(timeout=2.0, raise_error=True)\n",
     "# await backend.moon.wait_for_ready(reset=True, wait_time=1.1, timeout=10.0)\n",
     "\n",
-    "await backend.setup()\n",
+    "# await backend.setup()\n",
     "\n",
     "# pprint(backend.tracker[\"PLR setup\"], width=120)\n",
     "# backend.moon.get_response_by_id(cmd_id=\"PLR setup\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deck and LiquidHandler setup\n",
+    "\n",
+    "A PLR `deck` is required.\n",
+    "\n",
+    "We'll use the default for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# - liquid handler\n",
+    "from pylabrobot.liquid_handling import LiquidHandler\n",
+    "# - deck\n",
+    "from pylabrobot.resources.hamilton import STARLetDeck\n",
+    "\n",
+    "lh = LiquidHandler(backend=backend, deck=STARLetDeck())\n",
+    "\n",
+    "await lh.setup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources import (\n",
+    "    TIP_CAR_480_A00,\n",
+    "    PLT_CAR_L5AC_A00,\n",
+    "    Cos_96_DW_1mL,\n",
+    "    HTF_L\n",
+    ")\n",
+    "\n",
+    "tip_car = TIP_CAR_480_A00(name='tip carrier')\n",
+    "tip_car[0] = HTF_L(name='tips_01')\n",
+    "\n",
+    "lh.deck.assign_child_resource(tip_car, rails=3)\n",
+    "\n",
+    "plt_car = PLT_CAR_L5AC_A00(name='plate carrier')\n",
+    "plt_car[0] = Cos_96_DW_1mL(name='plate_01')\n",
+    "\n",
+    "lh.deck.assign_child_resource(plt_car, rails=15)\n",
+    "\n",
+    "# lh.summary()"
    ]
   },
   {
@@ -952,7 +1017,20 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "tiprack = lh.get_resource(\"tips_01\")\n",
+    "\n",
+    "await lh.pick_up_tips(tiprack[\"A1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backend.builder.current_action"
+   ]
   },
   {
    "attachments": {},
@@ -969,7 +1047,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plate = lh.get_resource(\"plate_01\")\n",
+    "await lh.aspirate(plate[\"A1\"], vols=[100.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backend.builder.current_action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await lh.dispense(plate[\"A2\"], vols=[50.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backend.builder.current_action"
+   ]
   },
   {
    "attachments": {},
@@ -986,7 +1094,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "await lh.discard_tips()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backend.builder.current_action[\"GCODE\"][3]"
+   ]
   },
   {
    "attachments": {},
@@ -1003,7 +1122,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "await lh.stop()"
+   ]
   },
   {
    "attachments": {},
@@ -1012,7 +1133,7 @@
     "tags": []
    },
    "source": [
-    "### Internal backend commands"
+    "## Internal backend commands"
    ]
   },
   {
@@ -1206,7 +1327,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deck setup examples\n"
+    "## Deck setup examples\n",
+    "\n",
+    "> Pipettin's deck has not been implemented yet. Default PLR examples follow."
    ]
   },
   {
@@ -1394,7 +1517,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Protocol actions"
+    "## Protocol actions\n",
+    "\n",
+    "> Default examples from PLR."
    ]
   },
   {
